<?xml version="1.0"?>
<package format="3">
  <name>cae_microphone_array</name>
  <version>0.0.1</version>
  <description>Microphone array interface</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- msg generation dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- required for all msg packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
